# hairbrush

./: .cursorrules  .gitignore  Project_Brief.md  README.md  analyze_svg.py  architecture_plan.md  drawing_test.gcode  path_to_gcode.py  pyproject.toml  refactoring.md  run.sh  run_js_tests.py  test_curves.gcode
.specstory/history/: 2025-06-21_03-52-rethinking-the-inkscape-extension-approach.md  2025-06-22_00-37-clean-up-h-airbrush-project-files.md  2025-06-22_18-38-developing-a-control-application-for-h-airbrush.md  2025-06-24_03-29-refine-h-airbrush-controller-and-memory-bank.md  2025-06-24_23-54-familiarize-with-memory-bank-for-debugging.md  2025-07-09_20-13-familiarize-with-memory-bank-and-code.md  2025-07-09_22-19-prepare-for-refactoring-continuation.md  2025-07-09_23-36-discussing-the-van-topic.md  2025-07-12_02-15-refactor-gcodegenerator-for-inkscape.md  2025-07-12_03-59-running-venv-with-run-sh-script.md
assets/: drawing_test.gcode  dual_airbrush_test_strokes_varied.gcode
config/: example.yaml  settings.yaml
docs/: endstop_monitoring.md  research_notes.md
docs/archive/: completed_tasks.md
docs/initial-docs/: Duet_Endstop_Monitoring_Guide.md  Duet_Flask_Controller_Design_Notes.md  Duet_Plotter_GCode_Reference.md  JS_Brush_Rendering_Notes.md  Refactoring_GCodeGenerator_HAirbrush.md  duet_plotter_gcode_reference_v_2.md
hairbrush/: svg_parser.py
inkscape_extension/: INSTALL.md  README.md  check_extension.inx  check_extension.py  check_installation.inx  check_installation.py  dual_airbrush_export.inx  dual_airbrush_export.py  hairbrush.inx  hairbrush.py  hairbrush_control.py  hairbrush_export.inx  hairbrush_export.py  hairbrush_export_effect.inx  hairbrush_export_effect.py  install.py  install_extension.py  install_hairbrush.py  requirements.txt  test_gcode_generator.py
inkscape_extension/hairbrush_lib/: README.md  __init__.py  config.py  gcode_generator.py  path_processor.py  svg_parser.py
inkscape_extension/hairbrush_lib/templates/: default.yaml
inkscape_test/: README.md  test_export_effect.inx  test_export_effect.py
memory-bank/: activeContext.md  implementation-plan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
src/hairbrush/: __init__.py  config.py  gcode_generator.py  path_processor.py  svg_parser.py
tests/: conftest.py  test_gcode_generation.py  test_improved_path_processing.py  test_path_processing.py  visualize_gcode.py
tests/gcode_backend/: __init__.py  test_template_parser.py
tests/inkscape_extension/: __init__.py  test_svg_parser.py
tinyg_tester/: controller.py
tinyg_tester/cli/: main.py
web_controller/: app.py  clear_cache.py  config.py  config.yaml  config.yaml.bak  duet_client.py  duet_status_commands.yaml  job_manager.py  machine_control.py  serial_service.py  test_connection.py
web_controller/static/: test.html
web_controller/templates/: base.html  control.html  dashboard.html  file_preview.html  files.html  maintenance.html  settings.html  setup.html
web_controller/uploads/: dual_airbrush_test_strokes_varied.gcode
web_controller/utils/: __init__.py  gcode_parser.py  logger.py
(+39 files in other folders)
