[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hairbrush"
version = "0.1.0"
description = "Dual-airbrush plotter controller for Duet 2 WiFi board"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pyyaml>=6.0",
    "lxml>=4.9.0",  # For XML/SVG processing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hairbrush", "inkscape_extension", "gcode_backend"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
