[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hairbrush"
version = "0.1.0"
description = "Dual-airbrush plotter controller for Duet 2 WiFi board"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "lxml>=4.9.0",  # For XML/SVG processing
    "pyyaml>=6.0",  # For configuration files
    # inkex is provided by Inkscape runtime, don't add here
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

# Note: inkex is not included as a dependency because it's provided by Inkscape
# when the extension is run within Inkscape's environment

[tool.hatch.build.targets.wheel]
packages = ["src/hairbrush"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[project.scripts]
hairbrush-install = "hairbrush.tools.install:main"
